--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ body{
   font-size: 17px;
 }
 .form .link a{
-  color: #333;
+  color: white;
 }
 .form .link a:hover{
   text-decoration: underline;
